design: 스타일 오류 수정

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -495,12 +495,12 @@
 }
 
 .opt-inp-date {
-  background-image: url(../../../assets/img/ico-cal.svg);
+  background-image: url(../assets/img/ico-cal.svg);
   padding-left: 45px;
 }
 
 .opt-inp-search {
-  background-image: url(../../../assets/img/ico-search.svg);
+  background-image: url(../assets/img/ico-search.svg);
   padding-left: 45px;
 }
 
