--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -369,25 +369,29 @@
 
 .status {
   padding: 7px 10px;
-  background-color: #e1e9e9;
   border-radius: 10px;
   font-weight: bold;
-  color: #89adad;
+  color: #ffffff;
 }
 
-.status.success {
-  background-color: rgba(74, 226, 124, 0.42);
-  color: #1faa4d;
+.status.waiting {
+  background-color: #ffff00;
+}
+
+.status.processed {
+  background-color: #008000;
 }
 
 .status.fail {
-  background-color: #ffd2d2;
-  color: red;
+  background-color: #ffa500;
 }
 
-.status.pending {
-  color: black;
-  background-color: #d6d6d6;
+.status.expired {
+  background-color: #808080;
+}
+
+.status.canceled {
+  background-color: #808080;
 }
 
 .copy-btn {
